change blog title

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://pierreozoux.github.io
-title: Pierre's Blog
+title: Pierre-O's Blog
 subtitle: My personnal blog about IT stuff
 author: Pierre Ozoux
 simple_search: http://google.com/search
