--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://pierreozoux.github.io
+url: http://pierre-o.fr
 title: Pierre-O's Blog
 subtitle: My personnal blog about IT stuff
 author: Pierre Ozoux
