--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://www.pierre-o.fr
 title: Pierre-O's Blog
 subtitle: My personnal blog about IT stuff
 author: Pierre Ozoux
-simple_search: http://google.com/search
+simple_search: http://www.duckduckgo.com/
 description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
