--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Pierre-O's Blog
 subtitle: My personnal blog about IT stuff
 author: Pierre Ozoux
 simple_search: http://www.duckduckgo.com/
-description:
+description: Defending Internet Freedom | devops | setting up http://IndieHosters.net
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
